Fix tools icons alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1299,7 +1299,7 @@
 					}
 
 			ul.grid-icons.three {
-				width: 21.5rem;
+				width: 20rem;
 			}
 
 				ul.grid-icons.three > li:nth-child(-n + 3) {
